# ChoreBot

./: .gitignore  BUILD.bazel  WORKSPACE
cmd/: BUILD.bazel  main.go
