load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/Panfilwk/ChoreBot/cmd",
    visibility = ["//visibility:private"],
    deps = ["@in_gopkg_tucnak_telebot_v2//:telebot.v2"],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
